Added a CLI project and Microsoft.Extensions.AI

--- a/MattEland.AI.BatComputer/MattEland.AI.BatComputer.csproj
+++ b/MattEland.AI.BatComputer/MattEland.AI.BatComputer.csproj
@@ -47,5 +47,8 @@
             ThemeService;
         </UnoFeatures>
     </PropertyGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\MattEland.AI.BatLogic\MattEland.AI.BatLogic.csproj" />
+    </ItemGroup>
 
 </Project>
