Add DisplayLogo helper and integrate custom Figlet logo
Introduce `DisplayHelpers` with `DisplayLogo` method for rendering a styled Figlet-based logo using the "Doom.flf" font. Update `Program.cs` to replace inline logo code with the new helper, ensuring cleaner and reusable design. Adjust project files to include the font as a content file.

--- a/MattEland.AI.BatCli/MattEland.AI.BatCli.csproj
+++ b/MattEland.AI.BatCli/MattEland.AI.BatCli.csproj
@@ -16,4 +16,11 @@
       <PackageReference Include="Spectre.Console.Cli" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Doom.flf" />
+      <Content Include="Doom.flf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
