--- a/MattEland.AI.BatCli/MattEland.AI.BatCli.csproj
+++ b/MattEland.AI.BatCli/MattEland.AI.BatCli.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" />
       <PackageReference Include="Spectre.Console" />
       <PackageReference Include="Spectre.Console.Cli" />
     </ItemGroup>
