--- a/MattEland.AI.BatComputer/MattEland.AI.BatComputer.csproj
+++ b/MattEland.AI.BatComputer/MattEland.AI.BatComputer.csproj
@@ -50,5 +50,8 @@
     <ItemGroup>
       <ProjectReference Include="..\MattEland.AI.BatLogic\MattEland.AI.BatLogic.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    </ItemGroup>
 
 </Project>
