Adds a random number generator command
Introduces a command-line tool to generate random numbers within a user-specified range.

This enhances the CLI's functionality by providing a utility for simulations, testing, or general-purpose random number generation, displaying the result in an appealing format.

--- a/MattEland.AI.BatCli/MattEland.AI.BatCli.csproj
+++ b/MattEland.AI.BatCli/MattEland.AI.BatCli.csproj
@@ -19,8 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="Doom.flf" />
-      <Content Include="Doom.flf">
+      <Content Update="Doom.flf">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
